--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-admin": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
+    "react-icons": "^5.5.0",
     "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.5",
     "react-range-slider-input": "^3.0.7",
