--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.1",
     "moment": "^2.30.1",
     "ra-data-simple-rest": "^5.3.0",
     "react": "^18.2.0",
